[gd_scene load_steps=35 format=4 uid="uid://bea207b44fohi"]

[ext_resource type="Script" path="res://assets/data/Menus/menu_pausa.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dv3jspu7oem70" path="res://assets/lang/images/help/ayuda.jpg" id="2"]
[ext_resource type="Texture2D" uid="uid://d4isj7osm6ghx" path="res://assets/lang/images/menu/banner.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dsr7wbb47jl6k" path="res://assets/images/menuElements/buttons_tile.png" id="4"]
[ext_resource type="Shader" path="res://assets/data/Shaders/Profundidad.gdshader" id="5"]
[ext_resource type="PackedScene" uid="uid://cug7tnx8fwwpb" path="res://assets/data/Menus/menu_salir.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://cuhojqnd06mom" path="res://assets/data/Menus/menu_opciones.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://q1e66hhle40r" path="res://assets/audio/fx/sfx_node.tscn" id="8"]
[ext_resource type="AudioStream" uid="uid://dv2x7x7kgcthd" path="res://assets/audio/fx/win/click.ogg" id="9"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nbs46"]
atlas = ExtResource("2")
region = Rect2(0, 0, 512, 384)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aumv5"]
size = Vector2(1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_04ub0"]
atlas = ExtResource("4")
region = Rect2(16, 59, 96, 44)
margin = Rect2(10, 7, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3cgm"]
atlas = ExtResource("4")
region = Rect2(16, 59, 96, 44)
margin = Rect2(10, 7, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeoc2"]
atlas = ExtResource("4")
region = Rect2(112, 52, 96, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g3wn"]
atlas = ExtResource("4")
region = Rect2(239, 63, 68, 37)
margin = Rect2(8, 6, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7gc5"]
atlas = ExtResource("4")
region = Rect2(239, 63, 68, 37)
margin = Rect2(8, 6, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d0is"]
atlas = ExtResource("4")
region = Rect2(337, 56, 68, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5ylx"]
atlas = ExtResource("4")
region = Rect2(238, 113, 68, 33)
margin = Rect2(7, 5, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e5me"]
atlas = ExtResource("4")
region = Rect2(238, 113, 68, 33)
margin = Rect2(7, 5, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_guvx2"]
atlas = ExtResource("4")
region = Rect2(337, 108, 68, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tqlj"]
atlas = ExtResource("4")
region = Rect2(14, 112, 93, 35)
margin = Rect2(7, 5, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1uk7"]
atlas = ExtResource("4")
region = Rect2(14, 112, 93, 35)
margin = Rect2(7, 5, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sr3d"]
atlas = ExtResource("4")
region = Rect2(112, 107, 93, 35)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ogw25"]
shader = ExtResource("5")
shader_parameter/amount = 1.5

[sub_resource type="Gradient" id="Gradient_vk24m"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p04g5"]
gradient = SubResource("Gradient_vk24m")

[sub_resource type="Gradient" id="Gradient_h5qfx"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kt02d"]
gradient = SubResource("Gradient_h5qfx")
width = 1920
height = 1080
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1.58, 0)

[sub_resource type="Animation" id="Animation_xy6x1"]
resource_name = "Act_Ayuda"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(960, 540), Vector2(960, 1620)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Ayuda:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(704, 1500), Vector2(704, 416)]
}

[sub_resource type="Animation" id="Animation_weumk"]
resource_name = "Act_Pausa"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fondo_Borroso:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Menu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(960, 1620), Vector2(960, 540)]
}

[sub_resource type="Animation" id="Animation_ijihv"]
resource_name = "Des_Ayuda"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(960, 1620), Vector2(960, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Ayuda:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(704, 416), Vector2(704, 1500)]
}

[sub_resource type="Animation" id="Animation_vhgta"]
resource_name = "Des_Pausa"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(960, 540), Vector2(960, 1620)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Fondo_Borroso:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_s2nhr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Fondo_Borroso:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Menu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector2(960, 1620)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Ayuda:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(704, 1500)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iieyc"]
_data = {
"Act_Ayuda": SubResource("Animation_xy6x1"),
"Act_Pausa": SubResource("Animation_weumk"),
"Des_Ayuda": SubResource("Animation_ijihv"),
"Des_Pausa": SubResource("Animation_vhgta"),
"RESET": SubResource("Animation_s2nhr")
}

[node name="MenuPausa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Ayuda" type="TextureRect" parent="CanvasLayer"]
z_index = 3
anchors_preset = -1
anchor_left = 0.366667
anchor_top = 1.38889
anchor_right = 0.633334
anchor_bottom = 1.74444
offset_left = -0.000671387
offset_top = -0.0012207
offset_right = -0.000732422
offset_bottom = 0.00488281
texture = SubResource("AtlasTexture_nbs46")
metadata/_edit_use_anchors_ = true

[node name="TouchAyuda" type="TouchScreenButton" parent="CanvasLayer/Ayuda"]
position = Vector2(256, 164)
shape = SubResource("RectangleShape2D_aumv5")

[node name="Menu" type="Sprite2D" parent="CanvasLayer"]
z_index = 1
position = Vector2(960, 1620)
scale = Vector2(2, 2)
texture = ExtResource("3")
region_enabled = true
region_rect = Rect2(112, 16, 288, 336)
metadata/_edit_lock_ = true

[node name="Boton_Jugar" type="TextureButton" parent="CanvasLayer/Menu"]
z_index = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.506
anchor_right = 0.667
anchor_bottom = 0.637
offset_left = -143.904
offset_top = -168.016
offset_right = -144.096
offset_bottom = -168.032
texture_normal = SubResource("AtlasTexture_04ub0")
texture_pressed = SubResource("AtlasTexture_m3cgm")
texture_hover = SubResource("AtlasTexture_eeoc2")
metadata/_edit_use_anchors_ = true

[node name="Boton_Salir" type="TextureButton" parent="CanvasLayer/Menu"]
z_index = 1
anchors_preset = -1
anchor_left = 0.373264
anchor_top = 0.827381
anchor_right = 0.609375
anchor_bottom = 0.9375
offset_left = -144.0
offset_top = -168.0
offset_right = -144.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_2g3wn")
texture_pressed = SubResource("AtlasTexture_j7gc5")
texture_hover = SubResource("AtlasTexture_0d0is")
metadata/_edit_use_anchors_ = true

[node name="Boton_Ayuda" type="TextureButton" parent="CanvasLayer/Menu"]
anchors_preset = -1
anchor_left = 0.144097
anchor_top = 0.677083
anchor_right = 0.380208
anchor_bottom = 0.775298
offset_left = -144.0
offset_top = -168.0
offset_right = -144.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_x5ylx")
texture_pressed = SubResource("AtlasTexture_1e5me")
texture_hover = SubResource("AtlasTexture_guvx2")
metadata/_edit_use_anchors_ = true

[node name="Boton_Opciones" type="TextureButton" parent="CanvasLayer/Menu"]
anchors_preset = -1
anchor_left = 0.581597
anchor_top = 0.677083
anchor_right = 0.904514
anchor_bottom = 0.78125
offset_left = -144.0
offset_top = -168.0
offset_right = -144.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_6tqlj")
texture_pressed = SubResource("AtlasTexture_e1uk7")
texture_hover = SubResource("AtlasTexture_6sr3d")
metadata/_edit_use_anchors_ = true

[node name="Fondo_Borroso" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_ogw25")
position = Vector2(960, 544)
scale = Vector2(30, 17)
texture = SubResource("GradientTexture2D_p04g5")
metadata/_edit_lock_ = true

[node name="Oscuridad" type="Sprite2D" parent="CanvasLayer/Fondo_Borroso"]
position = Vector2(0, -0.117643)
scale = Vector2(0.0333333, 0.0590414)
texture = SubResource("GradientTexture2D_kt02d")
metadata/_edit_lock_ = true

[node name="Animaciones" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iieyc")
}

[node name="menu_salir_principal" parent="." instance=ExtResource("6")]
visible = false
z_index = 1
layout_mode = 1

[node name="menu_opciones" parent="." instance=ExtResource("7")]
visible = false
z_index = 1
layout_mode = 1

[node name="sfx_node" parent="." instance=ExtResource("8")]
stream = ExtResource("9")

[connection signal="pressed" from="CanvasLayer/Ayuda/TouchAyuda" to="." method="_on_touch_ayuda_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Boton_Jugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Boton_Salir" to="." method="_on_boton_salir_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Boton_Ayuda" to="." method="_on_boton_ayuda_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Boton_Opciones" to="." method="_on_boton_opciones_pressed"]
